# Climb-app-Home

./: .replit  .replit.new  package-lock.json  package.json  package.json.backup  pyproject.toml  replit.md  start_python_server.sh  tailwind.config.ts
attached_assets/: Pasted-Add-media-photos-videos-feature-to-the-climbing-session-cards-on-the-homepage-Current-State-Sess-1750743716500_1750743716501.txt  Pasted-Create-a-FastAPI-backend-for-a-climbing-session-tracking-social-media-app-Project-Structure-climbi-1750739984357_1750739984358.txt  Pasted-Here-s-a-precise-prompt-for-Replit-to-build-the-profile-page-Create-a-Profile-Page-with-use-1751002890827_1751002890828.txt  Pasted-Here-s-a-precise-prompt-to-fix-all-the-issues-Fix-the-Session-Details-Page-bugs-to-match-th-1750828257411_1750828257412.txt  Pasted-Here-s-a-prompt-to-bypass-authentication-and-show-Toad1-s-profile-with-sample-data-Temporar-1751004579273_1751004579274.txt  Pasted-Here-s-the-updated-prompt-with-those-clarifications-Create-a-Session-Details-Page-with-an-e-1750826833204_1750826833205.txt
backend/: crud.py  database.py  main.py  models.py  schemas.py  seed_db.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BottomNavigation.tsx  CreateSessionModal.tsx  MediaGallery.tsx  SessionCard.tsx  UserMenu.tsx
client/src/components/auth/: AuthModal.tsx  LoginForm.tsx  RegisterForm.tsx
client/src/lib/: auth.ts  queryClient.ts
client/src/pages/: Home.tsx  Profile.tsx  SessionDetails.tsx
server/: auth.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
